crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI049_PYI049.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI049 Private TypedDict `_UnusedTypedDict` is never used
 --> PYI049.py:5:7
  |
5 | class _UnusedTypedDict(TypedDict):
  |       ^^^^^^^^^^^^^^^^
  |

PYI049 Private TypedDict `_UnusedTypedDict2` is never used
 --> PYI049.py:9:7
  |
9 | class _UnusedTypedDict2(typing.TypedDict):
  |       ^^^^^^^^^^^^^^^^^
  |

PYI049 Private TypedDict `_UnusedTypedDict3` is never used
  --> PYI049.py:21:1
   |
21 | _UnusedTypedDict3 = TypedDict("_UnusedTypedDict3", {"foo": int})
   | ^^^^^^^^^^^^^^^^^
   |
