crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI050_PYI050.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
 --> PYI050.pyi:6:24
  |
6 | def foo_no_return(arg: NoReturn): ...  # Error: PYI050
  |                        ^^^^^^^^
  |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
 --> PYI050.pyi:8:10
  |
8 |     arg: typing_extensions.NoReturn,
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:10:44
   |
10 | def foo_no_return_kwarg(arg: int, *, arg2: NoReturn): ...  # Error: PYI050
   |                                            ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:11:47
   |
11 | def foo_no_return_pos_only(arg: int, /, arg2: NoReturn): ...  # Error: PYI050
   |                                               ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:13:21
   |
13 | def foo_args(*args: NoReturn): ...  # Error: PYI050
   |                     ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:14:26
   |
14 | def foo_kwargs(**kwargs: NoReturn): ...  # Error: PYI050
   |                          ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:15:28
   |
15 | def foo_args_kwargs(*args: NoReturn, **kwargs: NoReturn): ...  # Error: PYI050
   |                            ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:15:48
   |
15 | def foo_args_kwargs(*args: NoReturn, **kwargs: NoReturn): ...  # Error: PYI050
   |                                                ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:19:50
   |
19 | def foo_int_args_no_return(*args: int, **kwargs: NoReturn): ...  # Error: PYI050
   |                                                  ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:20:37
   |
20 | def foo_int_kwargs_no_return(*args: NoReturn, **kwargs: int): ...  # Error: PYI050
   |                                     ^^^^^^^^
   |

PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  --> PYI050.pyi:24:21
   |
24 | def stringized(arg: "NoReturn"): ...
   |                     ^^^^^^^^^^
   |
