crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI052_PYI052.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI052 Need type annotation for `field5`
  --> PYI052.pyi:14:10
   |
14 | field5 = 0  # type: int  # Y033 Do not use type comments in stubs (e.g. use "x: int" instead of "x = ... # type: int")  # Y052 Need ty…
   |          ^
   |

PYI052 Need type annotation for `field6`
  --> PYI052.pyi:15:10
   |
15 | field6 = 0  # Y052 Need type annotation for "field6"
   |          ^
   |

PYI052 Need type annotation for `field7`
  --> PYI052.pyi:16:10
   |
16 | field7 = b""  # Y052 Need type annotation for "field7"
   |          ^^^
   |

PYI052 Need type annotation for `field71`
  --> PYI052.pyi:17:11
   |
17 | field71 = "foo"  # Y052 Need type annotation for "field71"
   |           ^^^^^
   |

PYI052 Need type annotation for `field8`
  --> PYI052.pyi:19:10
   |
19 | field8 = False  # Y052 Need type annotation for "field8"
   |          ^^^^^
   |

PYI052 Need type annotation for `field81`
  --> PYI052.pyi:20:11
   |
20 | field81 = -1  # Y052 Need type annotation for "field81"
   |           ^^
   |

PYI052 Need type annotation for `field83`
  --> PYI052.pyi:22:11
   |
22 | field83 = -42j  # Y052 Need type annotation for "field83"
   |           ^^^^
   |

PYI052 Need type annotation for `field84`
  --> PYI052.pyi:23:11
   |
23 | field84 = 5 + 42j  # Y052 Need type annotation for "field84"
   |           ^^^^^^^
   |

PYI052 Need type annotation for `field85`
  --> PYI052.pyi:24:11
   |
24 | field85 = -5 - 42j  # Y052 Need type annotation for "field85"
   |           ^^^^^^^^
   |

PYI052 Need type annotation for `field19`
  --> PYI052.pyi:33:11
   |
33 | field19 = [1, 2, 3]  # Y052 Need type annotation for "field19"
   |           ^^^^^^^^^
   |

PYI052 Need type annotation for `field20`
  --> PYI052.pyi:35:11
   |
35 | field20 = (1, 2, 3)  # Y052 Need type annotation for "field20"
   |           ^^^^^^^^^
   |

PYI052 Need type annotation for `field21`
  --> PYI052.pyi:37:11
   |
37 | field21 = {1, 2, 3}  # Y052 Need type annotation for "field21"
   |           ^^^^^^^^^
   |

PYI052 Need type annotation for `field212`
  --> PYI052.pyi:39:12
   |
39 | field212 = {"foo": "bar"}  # Y052 Need type annotation for "field212"
   |            ^^^^^^^^^^^^^^
   |

PYI052 Need type annotation for `WIZ`
   --> PYI052.pyi:114:11
    |
114 |     WIZ = 4
    |           ^
    |
