crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI056_PYI056.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI056 Calling `.append()` on `__all__` may not be supported by all type checkers (use `+=` instead)
 --> PYI056.py:4:1
  |
4 | __all__.append("D")
  | ^^^^^^^^^^^^^^
  |

PYI056 Calling `.extend()` on `__all__` may not be supported by all type checkers (use `+=` instead)
 --> PYI056.py:5:1
  |
5 | __all__.extend(["E", "Foo"])
  | ^^^^^^^^^^^^^^
  |

PYI056 Calling `.remove()` on `__all__` may not be supported by all type checkers (use `+=` instead)
 --> PYI056.py:6:1
  |
6 | __all__.remove("A")
  | ^^^^^^^^^^^^^^
  |
